Adicionando correção de alguns bugs
Consertei os problemas na porta do cliente e testei alguns envio de pacotes, conseguindo acessar o sevidor mas não executar corretamente o login. Ainda há alguns erros a serem corrigidos. Implementei a funcionalidade de busca de diários, alterando o o adapter.

--- a/Cliente/Mochilando-view/nbproject/project.properties
+++ b/Cliente/Mochilando-view/nbproject/project.properties
@@ -47,9 +47,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     <<<<<<< HEAD:\
-    ${file.reference.Mochilando-common.jar}:\
     ${reference.Mochilando-common.jar}:\
-    ${reference.Mochilando-core.jar}
+    ${file.reference.Mochilando-common.jar}
     ${libs.PostgreSQLDriver.classpath}:\
     ${file.reference.Mochilando-common.jar}
 =======
