--- a/br/cefetmg/inf/lpii/Cliente/Mochilando-view/nbproject/project.properties
+++ b/br/cefetmg/inf/lpii/Cliente/Mochilando-view/nbproject/project.properties
@@ -50,7 +50,8 @@ javac.classpath=\
     <<<<<<< HEAD:\
     ${reference.Mochilando-common.jar}:\
     ${file.reference.Mochilando-common.jar}:\
-    ${file.reference.bootstrap-1.0.10.jar}
+    ${file.reference.bootstrap-1.0.10.jar}:\
+    ${libs.primefaces.classpath}
     ${libs.PostgreSQLDriver.classpath}:\
     ${file.reference.Mochilando-common.jar}
 =======
